Changed linkedlists to Arraylists.